--- a/css/styles.css
+++ b/css/styles.css
@@ -84,3 +84,39 @@ li a:visited, .sign-button a:visited {
  .sign-link {
     font-weight: 700;
  }
+
+ .information {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 20px;
+    padding-bottom: 100px;
+ }
+
+ .info-text {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1f2937;
+ }
+
+ .cards-container {
+    display: flex;
+    column-gap: 50px;
+ }
+
+ .card {
+    width: 150px;
+ }
+
+ .card-img {
+    width: 150px;
+    height: 150px;
+    border: 3px #3882f6 solid;
+    border-radius: 8px;
+ }
+
+ .card-text {
+    margin: 8px 0;
+    color: #1f2937;
+    text-align: center;
+ }
